fix: docsearch selected background color in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -101,3 +101,7 @@ textarea:focus {
 ::-ms-input-placeholder {
   color: var(--ifm-color-emphasis-800);
 }
+
+html[data-theme="dark"] .DocSearch-Hit[aria-selected="true"] a {
+  background-color: #000;
+}
